--- a/mudi/src/main/resources/application.properties
+++ b/mudi/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/mudi
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
